<resources>
    <string name="app_name">StorageManagement</string>
    <string name="app_title">QUẢN LÝ KHO</string>
    <string name="add">Thêm</string>
    <string name="edit">Cập nhật</string>
    <string name="delete">Xóa</string>
    <string name="list_product">DANH SÁCH SẢN PHẨM</string>
    <string name="create_product">TẠO MỚI SẢN PHẨM</string>
    <string name="info_product">THÔNG TIN SẢN PHẨM</string>
    <string name="list_supplier">DANH SÁCH NHÀ CUNG CẤP</string>
    <string name="product_id">Mã sản phẩm</string>
    <string name="product_name">Tên sản phẩm</string>
    <string name="product_description">Mô tả</string>
    <string name="product_guarantee">Thời gian bảo hành</string>
    <string name="list_customer">DANH SÁCH KHÁCH HÀNG</string>
    <string name="create_customer">TẠO MỚI KHÁCH HÀNG</string>
    <string name="info_customer">THÔNG TIN KHÁCH HÀNG</string>
    <string name="customer_id">Mã khách hàng</string>
    <string name="customer_name">Tên khách hàng</string>
    <string name="address">Địa chỉ</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="list_warehouse">DANH SÁCH KHO HÀNG</string>
    <string name="create_warehouse">TẠO MỚI KHO HÀNG</string>
    <string name="info_warehouse">THÔNG TIN KHO HÀNG</string>
    <string name="warehouse_id">Mã kho hàng</string>
    <string name="warehouse_name">Tên kho hàng</string>
    <string name="list_goods_delivery_note">DANH SÁCH PHIẾU XUẤT</string>
    <string name="create_goods_delivery_note">TẠO MỚI PHIẾU XUẤT</string>
    <string name="info_goods_delivery_note">THÔNG TIN PHIẾU XUẤT</string>
    <string name="goods_delivery_note_id">Mã phiếu xuất</string>
    <string name="date">Ngày tháng</string>
    <string name="notice">Ghi chú</string>
    <string name="supplier_id">Mã nhà cung cấp</string>
    <string name="supplier_name">Tên nhà cung cấp</string>
    <string name="supplier_address">Địa chỉ nhà cung cấp</string>
    <string name="supplier_email">Email nhà cung cấp</string>
    <string name="add_supplier">THÊM MỚI NHÀ CUNG CẤP</string>
    <string name="info_supplier">THÔNG TIN NHÀ CUNG CẤP</string>

    <string name="list_goods_delivery_note_detail">DANH SÁCH CHI TIẾT PHIẾU XUẤT</string>
    <string name="create_goods_delivery_note_detail">TẠO MỚI CHI TIẾT PHIẾU XUẤT</string>
    <string name="info_goods_delivery_note_detail">THÔNG TIN CHI TIẾT PHIẾU XUẤT</string>
    <string name="quantity">Số lượng</string>
    <string name="price">Giá</string>
    <string name="goods_delivery_note_detail">Chi tiết phiếu xuất</string>
    <string name="list_goods_received_note">DANH SÁCH PHIẾU NHẬP</string>
    <string name="create_goods_received_note">TẠO MỚI PHIẾU NHẬP</string>
    <string name="info_goods_received_note">THÔNG TIN PHIẾU NHẬP</string>
    <string name="goods_received_note_id">Mã phiếu nhập</string>
    <string name="list_goods_received_note_detail">DANH SÁCH CHI TIẾT PHIẾU NHẬP</string>
    <string name="create_goods_received_note_detail">TẠO MỚI CHI TIẾT PHIẾU NHẬP</string>
    <string name="info_goods_received_note_detail">THÔNG TIN CHI TIẾT PHIẾU NHẬP</string>
    <string name="goods_received_note_detail">Chi tiết phiếu nhập</string>


    <string name="list_employee">DANH SÁCH NHÂN VIÊN</string>
    <string name="create_employee">TẠO MỚI NHÂN VIÊN</string>
    <string name="info_employee">THÔNG TIN NHÂN VIÊN</string>
    <string name="employee_id">Mã nhân viên</string>
    <string name="employee_name">Tên nhân viên</string>
    <string name="birthday">Sinh nhật</string>
    <string name="sex">Giới tính</string>
</resources>
