<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <Button
        android:id="@+id/buttonProduct"
        android:layout_width="200dp"
        android:layout_height="65dp"
        android:layout_marginBottom="16dp"
        android:text="@string/list_product"
        app:layout_constraintBottom_toTopOf="@+id/buttonCustomer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonCustomer"
        android:layout_width="200dp"
        android:layout_height="65dp"
        android:layout_marginBottom="16dp"
        android:text="@string/list_customer"
        app:layout_constraintBottom_toTopOf="@+id/buttonWarehouse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonWarehouse"
        android:layout_width="200dp"
        android:layout_height="65dp"
        android:layout_marginBottom="16dp"
        android:text="@string/list_warehouse"
        app:layout_constraintBottom_toTopOf="@+id/buttonGoodsDeliveryNote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonGoodsDeliveryNote"
        android:layout_width="200dp"
        android:layout_height="65dp"
        android:layout_marginBottom="16dp"
        android:text="@string/list_goods_delivery_note"
        app:layout_constraintBottom_toTopOf="@+id/buttonSupplier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonGoodsReceivedNote"
        android:layout_width="200dp"
        android:layout_height="65dp"
        android:layout_marginBottom="16dp"
        android:text="@string/list_goods_received_note"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonSupplier"
        android:layout_width="200dp"
        android:layout_height="65dp"
        android:layout_marginBottom="16dp"
        android:text="@string/list_supplier"
        app:layout_constraintBottom_toTopOf="@+id/buttonGoodsReceivedNote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonEmployee"
        android:layout_width="200dp"
        android:layout_height="65dp"
        android:layout_marginBottom="16dp"
        android:text="@string/list_employee"
        app:layout_constraintBottom_toTopOf="@+id/buttonProduct"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/app_title"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>