<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.goodsDeliveryNote.InfoGoodsDeliveryNoteActivity">

    <EditText
        android:id="@+id/editTextGoodsDeliveryNoteId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="47dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextDate"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/buttonGoodsDeliveryNoteDetail" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/spinnerCustomer"
        app:layout_constraintStart_toEndOf="@+id/textView4" />

    <EditText
        android:id="@+id/editTextNotice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginBottom="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/buttonEdit"
        app:layout_constraintStart_toEndOf="@+id/textView5" />

    <Spinner
        android:id="@+id/spinnerCustomer"
        android:layout_width="210dp"
        android:layout_height="30dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/spinnerWarehouse"
        app:layout_constraintStart_toEndOf="@+id/textView2" />

    <Spinner
        android:id="@+id/spinnerWarehouse"
        android:layout_width="210dp"
        android:layout_height="30dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/spinnerEmployee"
        app:layout_constraintStart_toEndOf="@+id/textView7" />

    <Spinner
        android:id="@+id/spinnerEmployee"
        android:layout_width="210dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextNotice"
        app:layout_constraintStart_toEndOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/goods_delivery_note_id"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextGoodsDeliveryNoteId"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/date"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextDate"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/notice"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextNotice"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="40dp"
        android:text="@string/customer_name"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="44dp"
        android:text="@string/warehouse_name"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="56dp"
        android:text="Tên nhân viên"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:layout_marginBottom="96dp"
        android:text="@string/edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginBottom="96dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonEdit" />

    <Button
        android:id="@+id/buttonGoodsDeliveryNoteDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/goods_delivery_note_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>